--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/IngMikkelBullauge/fine-tuning-openai#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "openai": "^3.0.0",
+    "xlsx": "^0.18.5"
   }
 }
